--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@
 
 .header-title {
     display: block;
-    max-width: 600px;
+    max-width: 700px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -323,6 +323,7 @@
     margin-bottom: 64px;
     display: flex;
     flex-wrap: wrap;
+    min-width: 360px;
 }
 
 .trends-info {
@@ -423,6 +424,12 @@
     word-wrap: break-word;
 }
 
+.trends-posts-name-link {
+    text-decoration: none;
+    font-family: Open Sans-Bold;
+    color: #ffffff;
+}
+
 
 .trends-pics {
     width: 100%;
@@ -463,8 +470,8 @@
     }
 
 .posts-preview {
-    max-width: 381px;
-    max-height: 292px;
+    min-width: 381px; /*изменено*/
+    min-height: 292px;
 }
 
 .posts-content {
@@ -572,6 +579,12 @@
     font-family: Open Sans-Bold;
     font-size: 14px;
     text-transform: uppercase;
+}
+
+.recent-posts-name-link {
+    text-decoration: none;
+    font-family: Open Sans-Bold;
+    color: #000000;
 }
 
 .search-bar {
@@ -1106,15 +1119,24 @@
         display: block;
     }
 
+    .posts-preview {
+        min-width: 390px;
+        min-height: 300px;
+    }
+
     .posts-img {
         width: 100%;
         object-fit: fill;
     }
 
-    .tags-list {
-        margin-bottom: 15px;
-        margin-top: 16px;
+    .posts-content {
+        margin-left: 0;
     }
+
+        .tags-list {
+            margin-bottom: 15px;
+            margin-top: 16px;
+        }
 
 
     /*подножье-карусель media (min-width: 641px) and (max-width: 1199px)*/
@@ -1198,12 +1220,12 @@
     .header-logo {
         max-width: 330px;
         min-height: 250px;
-        margin-top: 30px;
+        margin: 30px 0 40px 0;
         flex-direction: column-reverse;
     }
 
     .header-img {
-        width: 100%;
+        width: 270px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -1261,19 +1283,19 @@
     }
 
     .header-title {
-        display: block;
         width: 270px;
+        height: 300px;
     }
 
     .header-name {
-        font-size: 8vw;
+        font-size: 25px;
+        line-height: 1.5;
+        max-height: 300px;
+        min-height: 0;
     }
 
 
     /*верхн€€ карусель media (max-width: 640px)*/
-
-
-
     .trends-title {
         font-size: 18px;
     }
@@ -1334,6 +1356,15 @@
         display: block;
     }
 
+    .posts-preview {
+        min-width: 330px;
+        min-height: 250px;
+    }
+
+    .posts-content {
+        margin-left: 0;
+    }
+
     .posts-img {
         width: 100%;
         object-fit: fill;
@@ -1344,8 +1375,15 @@
         margin-top: 16px;
     }
 
+    /* боковое меню media (max-width: 640px)*/
+
+    .recent-posts-list {
+        margin-top: 45px;
+
+    }
 
     /*подножье-карусель media (max-width: 640px)*/
+
 
     .shop-carousel {
         width: 330px;
