--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 /*оноюо*/
 
 ._hidden {
-    /*visibility: hidden;*/
+    visibility: hidden;
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
@@ -166,6 +166,13 @@
     background-image: url("../svg/form-circle.svg");
 }
 
+
+.popup-text-do-you-sign-up-hidden {
+    width: 1px;
+    height: 1px;
+    clip: rect(1px, 1px, 1px, 1px);
+    position: absolute;
+}
 
 
 .popup-send-button {
